--- a/Web/src/main/resources/static/css/chat_room.css
+++ b/Web/src/main/resources/static/css/chat_room.css
@@ -1,5 +1,5 @@
 .inner{
-    height:800px;
+    height:630px;
     background-color: rgb(226, 223, 223);
     overflow: auto;
 }
@@ -14,7 +14,12 @@
 .answer_btn:hover{
     background-color: goldenrod;
 }
+.chat_area {
+    resize: none;
+}
 .send_btn{
+    width: 50px;
+    height: 50px;
     background-color:gray;
     color: white;
     border:solid;
@@ -22,6 +27,10 @@
 }
 .send_btn:hover{
     background-color:#646464
+}
+.file-upload {
+    display: flex;
+    flex-direction: column;
 }
 label img{
     width: 40px;
