--- a/Web/src/main/resources/templates/chat/chat_room.html
+++ b/Web/src/main/resources/templates/chat/chat_room.html
@@ -18,6 +18,15 @@
         checkLastMsg(/*[[ ${info.roomNo} ]]*/);
         /*]]*/
     });
+
+    function process(e) {
+        var code = (e.keyCode ? e.keyCode : e.which);
+        if (code == 13) {
+            /*<![CDATA[*/
+            msgSend(/*[[ ${info.roomNo} ]]*/);
+            /*]]*/
+        }
+    }
 </script>
 <body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -33,7 +42,7 @@
         <h5 class="mx-3 my-3 flex-fill">
             <div th:text="${info.name}">허현진</div>
         </h5>
-        <button onclick="addMessage()" class="answer_btn mx-2">
+        <button onclick="window.close()" class="answer_btn mx-2">
             답변완료
         </button>
     </div>
@@ -57,15 +66,15 @@
         </div>
     </div>
 </div>
-    <div id="chat_form" class="input-group d-flex justify-content-between" >
-        <input type="text" class="form-control" id="input_message" placeholder="채팅을 입력하세요."/>
-        <button class="send_btn" id="input_send" th:attr="onclick=|msgSend('${info.roomNo}')|">전송</button>
-    </div>
-    <div class="file-upload" style="float:right">
-        <label for="file-input">
-            <img th:src="@{/images/drive.svg}" class="my-2 mx-1">
-        </label>
-        <input type="file" id="file-input" style="display:none">
+    <div id="chat_form" class="input-group d-flex" >
+        <textarea rows="3" class="form-control chat_area" id="input_message" placeholder="채팅을 입력하세요." th:onkeypress="|process(event, this)|"></textarea>
+        <div class="file-upload" style="float:right">
+            <label for="file-input">
+                <img th:src="@{/images/drive.svg}" class="my-2 mx-1">
+            </label>
+            <input type="file" id="file-input" style="display:none">
+            <button class="send_btn" id="input_send" th:attr="onclick=|msgSend('${info.roomNo}')|">전송</button>
+        </div>
     </div>
 </div>
 </body>
