--- a/ChattingApp/app/src/main/res/layout/item_chattroomlist.xml
+++ b/ChattingApp/app/src/main/res/layout/item_chattroomlist.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="100dp"
@@ -45,7 +46,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
@@ -55,22 +56,30 @@
             android:id="@+id/curtime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:ems="10"
             android:importantForAutofill="no"
             android:inputType="time"
             android:labelFor="@id/curtime"
             android:textColor="@color/purple_light"
-            tools:ignore="SpeakableTextPresentCheck" />
+            app:layout_constraintBottom_toTopOf="@+id/unreadMessage"
+            tools:ignore="SpeakableTextPresentCheck"
+            tools:layout_editor_absoluteX="0dp" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:text="unreadMessage"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:id="@+id/unreadMessage"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="16dp"
             android:layout_weight="1"
             android:background="@drawable/oval"
-            android:gravity="center" />
-    </LinearLayout>
+            android:gravity="center"
+            android:text="unreadMessage"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.698"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
