--- a/Web/src/main/resources/static/css/chat_room.css
+++ b/Web/src/main/resources/static/css/chat_room.css
@@ -41,6 +41,26 @@ label img{
     border:none;
 }
 
+/* 날짜 */
+.hr-sect {
+    display: flex;
+    flex-basis: 100%;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.35);
+    font-size: 12px;
+    margin: 8px 0px;
+}
+.hr-sect::before,
+.hr-sect::after {
+    content: "";
+    flex-grow: 1;
+    background: rgba(0, 0, 0, 0.35);
+    height: 1px;
+    font-size: 0px;
+    line-height: 0px;
+    margin: 0px 16px;
+}
+
 .item{margin-top:15px}
 .item:first-child{margin-top:0px}
 .item .box{display:inline-block; max-width:180px; position:relative}
