--- a/Web/src/main/resources/static/css/chat_room.css
+++ b/Web/src/main/resources/static/css/chat_room.css
@@ -17,6 +17,9 @@
 .chat_area {
     resize: none;
 }
+#input_message{
+    border:none;
+}
 .send_btn{
     width: 50px;
     height: 50px;
@@ -26,7 +29,7 @@
     font-size: inherit;
 }
 .send_btn:hover{
-    background-color:#646464
+    background-color:#EEB500;
 }
 .file-upload {
     display: flex;
@@ -36,9 +39,6 @@ label img{
     width: 40px;
     height: 40px;
     background-color:antiquewhite;
-}
-#input_message{
-    border:none;
 }
 
 /* 날짜 */
@@ -61,12 +61,65 @@ label img{
     margin: 0px 16px;
 }
 
-.item{margin-top:15px}
-.item:first-child{margin-top:0px}
-.item .box{display:inline-block; max-width:180px; position:relative}
-.item .box::before{content:""; position:absolute; left:-8px; top:9px; border-top:0px solid transparent; border-bottom:8px solid transparent;border-right:8px solid #fff;}
-.item .box .msg {border:solid gold; border-radius:10px; padding:8px; text-align:left}
-.item .box .time {font-size:11px; color:#999; position:absolute; right: -75px; bottom:5px; width:70px}
-.item.mymsg{text-align:right}
-.item.mymsg .box .msg{border:solid darkblue}
-.item.mymsg .box .time{right:auto; left:-75px}
+/* 말풍선 */
+.item {
+    margin-top:0px
+}
+.item .box{
+    display:inline-block;
+    max-width:180px;
+    position:relative
+}
+.item .box::before{
+    content:"";
+    position:absolute;
+    left:10px;
+    top:25px;
+    border-top:0px solid transparent;
+    border-bottom:18px solid transparent;
+    border-right:18px solid gold;
+}
+.item .box .msg {
+    font-size: 14px;
+    background-color: gold;
+    border: solid gold;
+    border-radius:15px;
+    padding:9px;
+    text-align:left;
+    box-shadow: 5px 5px 5px #B5BCC3;
+    margin-left: 20px;
+}
+.item .box .time {
+    font-size:10px;
+    color:#999;
+    position:absolute;
+    right: -80px;
+    bottom:15px;
+    width:70px
+}
+.item.mymsg{
+    text-align:right;
+
+}
+.item.mymsg .box::before{
+    content:"";
+    position:absolute;
+    left:68px;
+    top:25px;
+    border-top:0px solid transparent;
+    border-bottom:0px solid transparent;
+    border-left:0px solid #212529;
+    border-right:0px solid;
+}
+.item.mymsg .box .msg{
+    background-color: #32383E;
+    color: #F2F2F2;
+    border:solid #32383E;
+    margin-right: 15px;
+    box-shadow: -5px 5px 5px #B5BCC3;
+}
+.item.mymsg .box .time{
+    right:auto;
+    left:-60px;
+    bottom: 15px;
+}
