--- a/ChattingApp/app/src/main/res/layout/activity_profile.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_profile.xml
@@ -1,61 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/main_blue">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars"
-        android:labelFor="@+id/imageButton"
-        android:contentDescription="profile_image"
-        android:background="@color/main_blue"/>
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.chattingapp.ui.navigation.NavigationViewModel" />
+    </data>
 
-    <TextView
-        android:id="@+id/company_introduce"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="company_introduce"
-        android:textColor="@color/purple_light"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.309"
-       />
+        android:layout_height="match_parent"
+        android:background="@color/main_blue">
 
-    <Button
-        android:id="@+id/button_profile_tochatroom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="To chatroom"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/company_introduce"
-        app:layout_constraintVertical_bias="0.569" />
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/main_blue"
+            android:contentDescription="profile_image"
+            android:labelFor="@+id/imageButton"
+            app:layout_constraintBottom_toBottomOf="@+id/profile_company_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/btn_dialog"
-        android:labelFor="@+id/imageButton2"
-        android:contentDescription="close_window"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/profile_company_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="company_name"
+            android:textColor="@color/purple_light"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.485"
+            tools:layout_editor_absoluteX="100dp" />
+
+        <TextView
+            android:id="@+id/profile_company_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="company_introduce"
+            android:textColor="@color/purple_light"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageButton"
+            app:layout_constraintVertical_bias="0.309" />
+
+        <TextView
+            android:id="@+id/profile_company_admin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="company_admin"
+            android:textColor="@color/purple_light"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/button_enter_room"
+            app:layout_constraintTop_toTopOf="@+id/profile_company_desc" />
+
+        <TextView
+            android:id="@+id/profile_company_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="company_email"
+            android:textColor="@color/purple_light"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/button_enter_room"
+            app:layout_constraintTop_toTopOf="@+id/profile_company_admin" />
+
+        <TextView
+            android:id="@+id/profile_company_tel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="company_tel"
+            android:textColor="@color/purple_light"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/profile_company_email" />
+
+
+        <Button
+            android:id="@+id/button_enter_room"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/solid_button"
+            android:text="To chatroom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/btn_dialog"
+            android:labelFor="@+id/imageButton2"
+            android:contentDescription="close_window"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
