modify app layout

--- a/ChattingApp/app/src/main/res/layout/activity_find_password.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_find_password.xml
@@ -1,58 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/main_blue">
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.chattingapp.ui.auth.AuthViewModel" />
+    </data>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@color/navy"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        tools:context=".ui.auth.FindPasswordActivity">
 
-        <EditText
-            android:id="@+id/find_email_email"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="20dp"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="phone"
-            android:text="Enter email"
-            android:textColor="@color/purple_light"
-            android:background="@drawable/bg_border_white"
-            android:drawableLeft="@drawable/ic_email"
-            android:importantForAutofill="no"
-            android:labelFor="@+id/find_email_phone"
-
-            />
-
-        <Button
-            android:id="@+id/button_certify"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="30dp"
-            android:layout_weight="1"
-            android:text="certify" />
+            android:layout_marginHorizontal="40dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp"
+                android:text="Find Password"
+                android:textColor="@color/purple_light"
+                android:textSize="35dp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/find_email_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/bg_border_white"
+                    android:cursorVisible="true"
+                    android:drawableLeft="@drawable/ic_email"
+                    android:drawablePadding="15dp"
+
+                    android:hint="Enter email"
+                    android:importantForAutofill="no"
+                    android:inputType="textNoSuggestions|textEmailAddress"
+                    android:labelFor="@+id/find_email_phone"
+                    android:text=""
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/purple"
+                    android:textSize="15sp"
+                    tools:ignore="LabelFor" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:text="We send the password to the email."
+                android:textColor="@color/purple"
+                android:textSize="13dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" />
+
+            <Button
+                android:id="@+id/button_activity_send_reset_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
+                android:background="@drawable/solid_button"
+                android:text="Find email"
+                android:textColor="@color/navy"/>
+
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"/>
-
-    <Button
-        android:id="@+id/button_activity_send_reset_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="30dp"
-        android:text="Find email" />
-
-</LinearLayout>
+</layout>
