--- a/ChattingApp/app/src/main/res/layout/activity_find_password_success.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_find_password_success.xml
@@ -1,28 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/main_blue">
 
-    <TextView
-        android:id="@+id/text_find_password_success"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginRight="30dp"
-        android:gravity="center"
-        android:text="We've sent password to your email"
-        android:textColor="@color/purple_light"
-        android:drawableLeft="@drawable/ic_email"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <Button
-        android:id="@+id/button_find_email_success_login"
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.example.chattingapp.ui.auth.AuthViewModel" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
-        android:text="To login" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:background="@color/navy"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        tools:context=".ui.auth.FindPasswordVerifyActivity">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp"
+                android:text="Find Password"
+                android:textColor="@color/purple_light"
+                android:textSize="35dp" />
+
+            <EditText
+                android:id="@+id/find_email_email"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/bg_border_white"
+                android:cursorVisible="true"
+                android:drawableLeft="@drawable/ic_email"
+                android:drawablePadding="15dp"
+                android:elevation="3dp"
+                android:hint="whghtjd320@naver.com"
+                android:importantForAutofill="no"
+                android:inputType="textNoSuggestions"
+                android:textColorHint="@color/purple_light"
+                android:textSize="15sp"
+                tools:ignore="LabelFor" />
+
+            <TextView
+                android:id="@+id/text_find_password_success"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:text="We've sent password to your email."
+                android:textColor="@color/purple"
+                android:textSize="13dp" />
+
+            <Button
+                android:id="@+id/button_find_email_success_login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
+                android:background="@drawable/solid_button"
+                android:text="To Login" />
+
+        </LinearLayout>
+    </LinearLayout>
+</layout>
