--- a/ChattingApp/app/src/main/res/layout/activity_profile.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_profile.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,112 +11,224 @@
             type="com.example.chattingapp.ui.navigation.NavigationViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_blue">
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/main_blue"
-            android:contentDescription="profile_image"
-            android:labelFor="@+id/imageButton"
-            app:layout_constraintBottom_toBottomOf="@+id/profile_company_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+        android:orientation="vertical"
+        tools:context=".ui.activity.MypageActivity"
+        android:background="@color/navy">
 
 
-        <TextView
-            android:id="@+id/profile_company_name"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="company_name"
-            android:textColor="@color/purple_light"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.485"
-            tools:layout_editor_absoluteX="100dp" />
+            android:layout_gravity="top"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
-        <TextView
-            android:id="@+id/profile_company_desc"
+            <ImageView
+                android:id="@+id/backToMainBtn"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_exit" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="company_introduce"
-            android:textColor="@color/purple_light"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton"
-            app:layout_constraintVertical_bias="0.309" />
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="10dp">
 
-        <TextView
-            android:id="@+id/profile_company_admin"
+            <ImageView
+                android:id="@+id/imageButton"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp"
+                android:src="@drawable/ic_person" />
+
+            <TextView
+                android:id="@+id/profile_company_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:layout_toRightOf="@+id/imageButton"
+                android:text="알파시티"
+                android:textColor="@color/white"
+                android:textSize="25dp" />
+
+        </RelativeLayout>
+
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="company_admin"
-            android:textColor="@color/purple_light"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/button_enter_room"
-            app:layout_constraintTop_toTopOf="@+id/profile_company_desc" />
+            android:layout_marginHorizontal="40dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/profile_company_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="company_email"
-            android:textColor="@color/purple_light"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/button_enter_room"
-            app:layout_constraintTop_toTopOf="@+id/profile_company_admin" />
+            <TextView
+                android:id="@+id/profile_company_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/profileDescText"
+                android:layout_toRightOf="@+id/profileDescIcon"
+                android:layout_marginBottom="70dp"
+                android:text="기업 상세정보 기입 기업 상세정보 기입 기업 상세정보 기입 기업 상세정보 기입 기업 상세정보 기입 기업 상세정보 기입"
+                android:textColor="@color/purple_light"
+                android:textSize="13dp" />
 
-        <TextView
-            android:id="@+id/profile_company_tel"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="company_tel"
-            android:textColor="@color/purple_light"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/profile_company_email" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/profileNameIcon"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/ic_person" />
+
+                <TextView
+                    android:id="@+id/profileNameText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_toRightOf="@+id/profileNameIcon"
+                    android:text="대표자"
+                    android:textColor="@color/purple"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/profile_company_admin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profileNameText"
+                    android:layout_toRightOf="@+id/profileNameIcon"
+                    android:text="@string/profileName"
+                    android:textColor="@color/purple_light"
+                    android:textSize="18dp" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:background="@color/purple_light" />
 
 
-        <Button
-            android:id="@+id/button_enter_room"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/solid_button"
-            android:text="To chatroom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
-            app:layout_constraintStart_toStartOf="parent" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/btn_dialog"
-            android:labelFor="@+id/imageButton2"
-            android:contentDescription="close_window"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/profileEmailIcon"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/ic_email" />
+
+                <TextView
+                    android:id="@+id/profileEmailText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_toRightOf="@+id/profileEmailIcon"
+                    android:text="@string/profileEmailText"
+                    android:textColor="@color/purple"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/profile_company_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profileEmailText"
+                    android:layout_toRightOf="@+id/profileEmailIcon"
+                    android:text="@string/profileEmail"
+                    android:textColor="@color/purple_light"
+                    android:textSize="18dp" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:background="@color/purple_light" />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/profilePhoneIcon"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="15dp"
+                    android:src="@drawable/ic_phone" />
+
+                <TextView
+                    android:id="@+id/profilePhoneText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_toRightOf="@+id/profilePhoneIcon"
+                    android:text="@string/profilePhoneText"
+                    android:textColor="@color/purple"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/profile_company_tel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/profilePhoneText"
+                    android:layout_toRightOf="@+id/profilePhoneIcon"
+                    android:text="010-1234-5678"
+                    android:textColor="@color/purple_light"
+                    android:textSize="18dp" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:background="@color/purple_light" />
+
+            <Button
+                android:id="@+id/button_enter_room"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/solid_button"
+                android:text="상담하기"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
+
+        </LinearLayout>
+    </LinearLayout>
 </layout>
