--- a/ChattingApp/app/src/main/res/layout/item_company.xml
+++ b/ChattingApp/app/src/main/res/layout/item_company.xml
@@ -1,45 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginRight="10dp"
-    android:orientation="horizontal"
-    android:background="@drawable/item_border">
+    android:layout_height="57dp"
+    android:orientation="horizontal">
 
 
     <ImageView
         android:id="@+id/companyImg"
         android:layout_width="25dp"
-        android:layout_height="match_parent"
+        android:layout_height="50dp"
         android:layout_weight="1"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_person"
         android:contentDescription="TODO" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:layout_height="55dp"
+        android:layout_weight="5"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/company_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="6dp"
             android:layout_weight="2"
+            android:textStyle="bold"
             android:gravity="center_vertical"
             android:text="company_name"
             android:textColor="#000000"
-            android:textSize="24sp" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/company_introduce"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="3dp"
             android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="3dp"
             android:text="company_introduce"
-            android:textColor="#666666"
-            android:textSize="16sp" />
+            android:textColor="@color/gray"
+            android:textSize="11dp" />
     </LinearLayout>
 
 </LinearLayout>
