--- a/Web/src/main/resources/static/css/counseling_content.css
+++ b/Web/src/main/resources/static/css/counseling_content.css
@@ -75,3 +75,23 @@
     left:-60px;
     bottom: 15px;
 }
+
+/* 날짜 */
+.hr-sect {
+    display: flex;
+    flex-basis: 100%;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.35);
+    font-size: 12px;
+    margin: 8px 0px;
+}
+.hr-sect::before,
+.hr-sect::after {
+    content: "";
+    flex-grow: 1;
+    background: rgba(0, 0, 0, 0.35);
+    height: 1px;
+    font-size: 0px;
+    line-height: 0px;
+    margin: 0px 16px;
+}
