add client edit

--- a/Web/src/main/resources/templates/client/client_info.html
+++ b/Web/src/main/resources/templates/client/client_info.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" th:href="@{/css/nav.css}">
     <link rel="stylesheet" th:href="@{/css/corporation.css}">
-    <title>corporation</title>
+    <title>client</title>
 </head>
 <body>
 
@@ -32,7 +32,7 @@
 <div th:replace="menu/nav::nav"></div>
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 wrapper">
     <div class="pt-3 pb-2 mb-3 border-bottom">
-        <h3 style="text-align:left;">고객 정보 및 상담 내역</h3>
+        <h3 style="text-align:left;">고객정보 및 상담내역</h3>
     </div>
 
     <img th:src="@{/css/images/corporation.svg}" class="rounded-circle" alt="" width="100px">
