--- a/Web/src/main/resources/templates/client/client_list.html
+++ b/Web/src/main/resources/templates/client/client_list.html
@@ -41,11 +41,11 @@
 
             <div class="form-check form-check-inline" style="margin-top:5px;">
                 <input class="form-check-input" type="checkbox" id="corp_available" value="option1">
-                <label class="form-check-label" for="corp_available">사용가능</label>
+                <label class="form-check-label" for="corp_available">사용 중</label>
             </div>
             <div class="form-check  form-check-inline" style="margin-top:5px;">
                 <input class="form-check-input" type="checkbox" id="corp_stop" value="option2">
-                <label class="form-check-label" for="corp_stop">정지</label>
+                <label class="form-check-label" for="corp_stop">사용 정지</label>
             </div>
 
             <div class="form-group" style="float:right;">
