--- a/ChattingApp/app/src/main/res/layout/activity_profile.xml
+++ b/ChattingApp/app/src/main/res/layout/activity_profile.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_blue">
+
+
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -59,3 +62,4 @@
         android:labelFor="@+id/imageButton2"
         android:contentDescription="close_window"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
