--- a/Web/src/main/resources/static/css/nav.css
+++ b/Web/src/main/resources/static/css/nav.css
@@ -36,6 +36,11 @@ body {
     color:#EEB500 ;
 }
 
+.sidebar .nav-link.active{
+    color:#EEB500 ;
+    font-weight: bolder;
+}
+
 .logout{
     background-color:#EEB500 ;
 }
