--- a/Web/src/main/resources/templates/counselor/coun_list.html
+++ b/Web/src/main/resources/templates/counselor/coun_list.html
@@ -89,16 +89,21 @@
         </table>
 
         <div class="corp_page">
-            <nav aria-label="Page navigation example">
+            <nav th:with="
+                pageNumber = ${pages.pageNumber},
+                startPage = ${pages.startPage},
+                endPage = (${pages.endPage})"
+                 aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
                     <li class="page-item">
                         <a class="page-link" href="#" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li th:each="page: ${#numbers.sequence(startPage, endPage)}"
+                        th:classappend="${page == pageNumber} ? 'active'" class="page-item">
+                        <a class="page-link" th:text="${page} + 1" th:href="@{/counselor(page=${page})}"></a>
+                    </li>
                     <li class="page-item">
                         <a class="page-link" href="#" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
