web-Set Permission on Management board

--- a/Web/src/main/resources/templates/menu/nav.html
+++ b/Web/src/main/resources/templates/menu/nav.html
@@ -7,10 +7,10 @@
             </h6>
             <div class="position-sticky pt-3">
                 <ul class="nav flex-column"> <!--nav-tabs -->
-                    <li class="nav-item mb-3">
-                        <a class="nav-link" aria-current="page" href="#" th:classappend="${nav.equals('corp')} ? 'active'"
+                    <li class="nav-item mb-3" th:remove="${auth==1}? tag:none">
+                        <a class="nav-link" th:remove="${auth==1}? tag:none" aria-current="page" href="#" th:classappend="${nav.equals('corp')} ? 'active'"
                            th:onclick="|location.href='@{/corporation}'|"> <!-- active-->
-                            <img src="../../static/images/corporation.svg" th:src="@{/images/corporation.svg}" alt="" width="25px">
+                            <img src="../../static/images/corporation.svg" th:remove="${auth==1}? tag:none" th:src="@{/images/corporation.svg}" alt="" width="25px">
                             기업관리
 
                         </a>
